- version: 0.1.21
  date:    wip
  changes:
  - Collapse (=> ...) -> ...
  - Start logging project changes in Changes yaml file

- version: 0.1.20
  date:    Wed Dec  6 08:39:19 AM PST 2023
  changes:
  - First official release to https://github.com/yaml/yamlscript/releases
  - Working YS to CLJ compiler written in Clojure
  - Builds bin/ys CLI and lib/libyamlscript.so shared libarary
  - Unit test suites for compiler and CLI
  - Make targets for build, test and install