@@ -220,3 +220,12 @@
       ([x] (let [n 1] (increase x n)))
       ([x n] (+ x n)))
   SKIP: true
+
+- name: Call main when program has one top level (defn main ...) form
+  yamlscript: |
+    !yamlscript/v0
+    defn main():
+      say: "Hello World"
+  clojure: |
+    (defn main [] (say "Hello World"))
+    (apply main ARGV)
